FIx: Fix z-index hell.

--- a/pages/contact/contact.scss
+++ b/pages/contact/contact.scss
@@ -188,7 +188,7 @@ html, body {
 
   .header__list_open {
     display: none;
-    z-index: 2;
+    z-index: 3;
   }
 
   .header__item {
